--- a/frontend/src/app/components/list-truck/list-truck.component.scss
+++ b/frontend/src/app/components/list-truck/list-truck.component.scss
@@ -1,3 +1,12 @@
 *, body{
     height: 100%;
 }
+
+.buttons{
+    display: flex;
+    flex-direction: row;
+}
+
+ button{
+    margin-left: 20px;
+}
