--- a/frontend/src/app/components/list-truck/list-truck.component.html
+++ b/frontend/src/app/components/list-truck/list-truck.component.html
@@ -30,7 +30,7 @@
   <tbody>
     @for (truck of trucks; track truck.id) {
     <tr>
-      <td>{{ truck.plate }}</td>
+      <td>{{ truck.id }}</td>
       <td>{{ truck.brand }}</td>
       <td>{{ truck.model }}</td>
       <td>{{ truck.year }}</td>
